tests/baselines/reference/quotedAccessorName1.errors.txt
tests/cases/compiler/quotedAccessorName1.ts(2,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/quotedAccessorName1.ts (1 errors) ====
    class C {
        get "foo"() { return 0; }
            ~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }